cluster/apps/default/zigbee2mqtt/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: unificontroller
  namespace: default
spec:
  entryPoints:
    - unificontroller
  routes:
    - match: HostSNI(`*`)
      services:
        - name: unifi-ap
          port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: unifidiscovery
  namespace: default
spec:
  entryPoints:
    - unifidiscovery
  routes:
    - match: HostSNI(`*`)
      services:
        - name: unifi-ap
          port: 10001
